Fix paragraph spacing

--- a/src/style.css
+++ b/src/style.css
@@ -7,7 +7,7 @@ code {
 }
 
 table {
-    margin: 0 auto 1em;
+    margin: 1em auto;
 }
 
 td, th {
